# tech-challenge

./: README.md  pyproject.toml
desafio_tecnico/src/: main.py  planner.py  utils.py
microservices/: ctbz.sql  docker-compose.yml
